# bit_buffer

./: .gitignore  BinaryMessage.cpp  BinaryMessage.h  BinaryMessage.hpp  CMakeLists.txt  README.md  binaryBuffer.hpp  bit_buffer.hpp  manualTest.cpp
test/: CMakeLists.txt  main.cpp  test.cpp
